Update submodule branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,8 @@
 [submodule "RadianceGrabber"]
 	path = RadianceGrabber
 	url = https://github.com/SEETHELIGHTS/RadianceGrabber.git
-	branch = release
+	branch = master
 [submodule "CapstonePlanning"]
 	path = CapstonePlanning
 	url = https://github.com/SEETHELIGHTS/CapstonePlanning.git
+	branch = master
